test/should-fail/jfxc4173b.fx
/**
 * Regress test for JFXC-4173.
 *
 *  Improved support for forward references
 *
 * @compilearg -XDfwdRefOpt=oninvalidate
 * @compile jfxc4173sub.fx
 * @test/warning
 */
